Export detailed GC logs for heaps

--- a/src/main/resources/localStrings.properties
+++ b/src/main/resources/localStrings.properties
@@ -163,6 +163,8 @@ fileexport_dialog_simplelog = Simple GC Log (GCHisto compatible, *.simple.log)
 
 fileexport_dialog_summarylog = Summary GC Log (*.csv)
 
+fileexport_dialog_heaplog = Detailed GC Log for Heaps (*.csv)
+
 fileexport_dialog_title = Export GC log file
 
 fileexport_dialog_txt = Plain data (*.txt)
